# TotalSegmentator-KonfAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
totalsegmentator_konfai/: main.py
