[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totalsegmentator-konfai"
version = "1.0.1"
description = "TotalSegmentator running on the KonfAI framework for fast inference."
license = "Apache-2.0"
readme = "README.md"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

requires-python = ">=3.8"
dependencies = [
"konfai==1.3.4"
]

[project.urls]
Homepage = "https://github.com/vboussot/TotalSegmentator-KonfAI"
Repository = "https://github.com/vboussot/TotalSegmentator-KonfAI"
Issues = "https://github.com/vboussot/TotalSegmentator-KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"


[project.scripts]
totalsegmentator-konfai = "totalsegmentator_konfai.main:main"
